fix: click reply then cancel on mobile opens the profile

--- a/src/main-scss/pad.scss
+++ b/src/main-scss/pad.scss
@@ -217,7 +217,8 @@ body.desktop #rooms-page {
 	position: relative;
 	background-size: cover;
 	background-position: center center;
-	-webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0,0,0,1)), color-stop(0.6, rgba(0,0,0,1)), color-stop(0.8, rgba(0,0,0,.8)), color-stop(1, rgba(0,0,0,0)));
+	-webkit-mask-image: linear-gradient(black, black, transparent);
+	mask-image: linear-gradient(black, black, transparent);
 	margin-bottom: 15px;
 	& > div {
 		background: $square-description-opacifier-bg;
